syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.campus_resource_management.proto.student";
option java_outer_classname = "StudentProto";

service StudentService {
  rpc ExistsByIdentityId(StudentExistRequest) returns (StudentExistResponse);
  rpc FilterStudentIdentityIds(FilterStudentRequest) returns (FilterStudentIdentityIdsResponse);
  rpc GetStudentInfoByIdentityId(StudentInfoRequest) returns (StudentInfoResponse);
}

message StudentExistRequest {
  string identity_id = 1;
}

message StudentExistResponse {
  bool exists = 1;
}

message FilterStudentRequest {
  string full_name = 1;
  string status = 2;
}

message FilterStudentIdentityIdsResponse {
  repeated string identity_ids = 1;
}

message StudentInfoRequest {
  string identity_id = 1;
}

message StudentInfoResponse {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string enrollment_status = 4;
}
